--- a/style2.css
+++ b/style2.css
@@ -9,13 +9,15 @@ body {
 
 
 header {
-   background-color: #13ba1b;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-    border-bottom: 3px solid #333;
-     box-shadow: 0 0 10px rgba(0,0,0,0.1);
+   display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  background-color:  #13ba1b;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  position: sticky;
+  top: 0;
+  z-index: 100;
+   border-bottom: 3px solid #333;
 }
 .logo {
   width: 60px;
@@ -107,5 +109,6 @@ footer {
   margin-top: 50px;
 
 }
+
 
 
