--- a/style2.css
+++ b/style2.css
@@ -13,11 +13,10 @@ header {
   align-items: center;
   padding: 10px 20px;
   background-color:  #13ba1b;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  position: sticky;
-  top: 0;
-  z-index: 100;
-   border-bottom: 3px solid #333;
+  color: rgb(0, 0, 0);
+  position: relative;
+
+    border-bottom: 3px solid #333;
 }
 .logo {
   width: 60px;
@@ -110,6 +109,7 @@ footer {
   margin-top: 50px;
 
 }
+
 
 
 
