--- a/style2.css
+++ b/style2.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #fdfdfd;
+  background-color: #13ba1b;
   color: #222;
   line-height: 1.6;
 }
@@ -111,6 +111,7 @@ footer {
   margin-top: 50px;
 
 }
+
 
 
 
