--- a/style2.css
+++ b/style2.css
@@ -2,8 +2,8 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #fdfdfd;
-  color: #222;
+  background-color: #f5f5f5;
+  color: #333;
   line-height: 1.6;
 }
 
@@ -111,6 +111,7 @@ footer {
   margin-top: 50px;
 
 }
+
 
 
 
