--- a/style2.css
+++ b/style2.css
@@ -12,7 +12,7 @@ header {
    display: flex;
   align-items: center;
   padding: 10px 20px;
-  background-color:  #13ba1b;
+  background-color:  #f5f5f5;
   color: rgb(0, 0, 0);
   position: relative;
 
@@ -111,6 +111,7 @@ footer {
   margin-top: 50px;
 
 }
+
 
 
 
