--- a/style2.css
+++ b/style2.css
@@ -9,12 +9,21 @@ body {
 
 
 header {
-   display: flex;
+  header {
+  display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 10px 20px;
-  background-color:  #f5f5f5;
-  color: rgb(0, 0, 0);
-  position: relative;
+  background-color: #f5f5f5;
+  border-bottom: 3px solid #333;
+}
+
+nav.top-buttons {
+  background-color: transparent; /* Махаме зеления фон от тук */
+}
+
+nav.top-buttons a {
+  background-color: #13ba1b; /* Добавяме го само на бутоните */
 
     border-bottom: 3px solid #333;
 }
@@ -23,13 +32,13 @@ header {
   height: auto;
   margin-right: 20px;
 }
-
-
 .top-buttons {
-  margin-left: auto;
-  background-color:#13ba1b;
-  padding:15px 0;
+  display: flex;
+  background-color: #13ba1b;
+  padding: 15px 20px;
+  border-radius: 5px; /* По избор */
 }
+
 
 .top-buttons a {
   display: inline-block;
@@ -111,6 +120,7 @@ footer {
   margin-top: 50px;
 
 }
+
 
 
 
